Spring-boot 3 upgrade in graphadmin
Issue-ID: AAI-4116
Change-Id: I894e0b0482df4078791cb58d0259852be02c2255
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>