@@ -39,7 +39,7 @@ public class PayloadUtil {
 
         InputStream inputStream = PayloadUtil.class.getClassLoader().getResourceAsStream("payloads/expected/" + fileName);
 
-        String message = String.format("Unable to find the %s in src/test/resources", fileName);
+        String message = "Unable to find the %s in src/test/resources".formatted(fileName);
         assertNotNull(inputStream, message);
 
         String resource = IOUtils.toString(inputStream);
@@ -52,7 +52,7 @@ public class PayloadUtil {
 
         InputStream inputStream = PayloadUtil.class.getClassLoader().getResourceAsStream("payloads/resource/" + fileName);
 
-        String message = String.format("Unable to find the %s in src/test/resources", fileName);
+        String message = "Unable to find the %s in src/test/resources".formatted(fileName);
         assertNotNull(inputStream, message);
 
         String resource = IOUtils.toString(inputStream);
@@ -65,7 +65,7 @@ public class PayloadUtil {
 
         InputStream inputStream = PayloadUtil.class.getClassLoader().getResourceAsStream("payloads/templates/" + fileName);
 
-        String message = String.format("Unable to find the %s in src/test/resources", fileName);
+        String message = "Unable to find the %s in src/test/resources".formatted(fileName);
         assertNotNull(inputStream, message);
 
         String resource;
@@ -100,7 +100,7 @@ public class PayloadUtil {
 
         InputStream inputStream = PayloadUtil.class.getClassLoader().getResourceAsStream("payloads/named-queries/" + fileName);
 
-        String message = String.format("Unable to find the %s in src/test/resources/payloads/named-queries", fileName);
+        String message = "Unable to find the %s in src/test/resources/payloads/named-queries".formatted(fileName);
         assertNotNull(inputStream, message);
 
         String resource = IOUtils.toString(inputStream);
