@@ -42,7 +42,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
@@ -137,7 +136,7 @@ public class DataSnapshotTest extends AAISetup {
 
         String logsFolder     = System.getProperty("AJSC_HOME") + "/logs/data/dataSnapshots/";
 
-        Set<Path> preSnapshotFiles = Files.walk(Paths.get(logsFolder)).collect(Collectors.toSet());
+        Set<Path> preSnapshotFiles = Files.walk(Path.of(logsFolder)).collect(Collectors.toSet());
 
         // Run the clear dataSnapshot and this time it should fail
         //String [] args = {"JUST_TAKE_SNAPSHOT"};  >> default behavior is now to use 15 threads
@@ -148,7 +147,7 @@ public class DataSnapshotTest extends AAISetup {
 
         // Add sleep so the file actually gets created with the data
 
-        Set<Path> postSnapshotFiles = Files.walk(Paths.get(logsFolder)).collect(Collectors.toSet());
+        Set<Path> postSnapshotFiles = Files.walk(Path.of(logsFolder)).collect(Collectors.toSet());
 
         assertThat(postSnapshotFiles.size(), is(preSnapshotFiles.size() +1));
         postSnapshotFiles.removeAll(preSnapshotFiles);
@@ -165,7 +164,7 @@ public class DataSnapshotTest extends AAISetup {
 
         String logsFolder = System.getProperty("AJSC_HOME") + "/logs/data/dataSnapshots/";
 
-        Set<Path> preSnapshotFiles = Files.walk(Paths.get(logsFolder)).collect(Collectors.toSet());
+        Set<Path> preSnapshotFiles = Files.walk(Path.of(logsFolder)).collect(Collectors.toSet());
 
         // previous test may have the same generated file name, this wait will ensure a new name is used for this test
         System.out.println("delay generation, seconds " + DELAYSINGLETHREADTEST);
@@ -179,7 +178,7 @@ public class DataSnapshotTest extends AAISetup {
 
         // Add sleep so the file actually gets created with the data
 
-        Set<Path> postSnapshotFiles = Files.walk(Paths.get(logsFolder)).collect(Collectors.toSet());
+        Set<Path> postSnapshotFiles = Files.walk(Path.of(logsFolder)).collect(Collectors.toSet());
 
         assertThat(postSnapshotFiles.size(), is(preSnapshotFiles.size() +1));
         boolean gryoSnapshotExists = postSnapshotFiles.stream()
