@@ -414,7 +414,7 @@ public class  PserverDedupWithDifferentSourcesOfTruthTest extends AAISetup{
         assertEquals("Scn4.pserverROSPlinkScn4",pserverRCTPlinkScn4.property("fqdn").value().toString());
         assertEquals(true, g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTPlinkScn4").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","p-interface").has("interface-name","pintPlinkScn4").hasNext());
-        assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTPlinkScn4").in("tosca.relationships.network.BindsTo")
+        assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTPlinkScn4").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","p-interface").has("interface-name","pintPlinkScn4").count().next(), "only 1 p-int is present on RCT pserver");
         assertEquals("/cloud-infrastructure/pservers/pserver/pserverRCTPlinkScn4/p-interfaces/p-interface/pintPlinkScn4", samePintScn4RCT.property("aai-uri").value().toString());
         //plink is not  moved from RO to RCT when p-int matches
@@ -441,14 +441,14 @@ public class  PserverDedupWithDifferentSourcesOfTruthTest extends AAISetup{
     @Test
     public void checkRCTPserverHasRelnToOnly1Complex() throws Exception {
 
-               assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTScn3").out("org.onap.relationships.inventory.LocatedIn")
+               assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTScn3").out("org.onap.relationships.inventory.LocatedIn")
                 .has("aai-node-type","complex").count().next(), "Edge to only 1 complex exists");
     }
     
     @Test
     public void checkRCTPserverHasRelnToOnly1Zone() throws Exception {
 
-               assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTScn6").out("org.onap.relationships.inventory.LocatedIn")
+               assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTScn6").out("org.onap.relationships.inventory.LocatedIn")
                 .has("aai-node-type","zone").count().next(), "Edge to only 1 Zone exists");
                assertEquals(true, g.V().has("aai-node-type", "zone").has("zone-id","zone-62").hasNext());
                //Verify no edge exists from zone62 to RO pserver
@@ -459,7 +459,7 @@ public class  PserverDedupWithDifferentSourcesOfTruthTest extends AAISetup{
     @Test
     public void checkRCTPserverHasRelnTo2GenericVnfs() throws Exception {
 
-               assertEquals(new Long(2L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTScn6").in("tosca.relationships.HostedOn")
+               assertEquals(Long.valueOf(2L), g.V().has("aai-node-type", "pserver").has("hostname","pserverRCTScn6").in("tosca.relationships.HostedOn")
                 .has("aai-node-type","generic-vnf").count().next(), "Edge to 2 generic-vnfs exists");
                assertEquals(true, g.V().has("aai-node-type", "generic-vnf").has("vnf-id","vnf-2").out().has("aai-node-type", "pserver").has("hostname", "pserverRCTScn6").hasNext());
                //Verify no edge exists from zone62 to RO pserver
@@ -485,7 +485,7 @@ public class  PserverDedupWithDifferentSourcesOfTruthTest extends AAISetup{
 
     	
     	//2. lagint12 int-name matches with lagint31. So, verify that lag-int does not move from rctP1 to rctP3
-    	assertEquals(new Long(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP1").in("tosca.relationships.network.BindsTo")
+    	assertEquals(Long.valueOf(1L), g.V().has("aai-node-type", "pserver").has("hostname","rctP1").in("tosca.relationships.network.BindsTo")
         		.has("aai-node-type","lag-interface").has("interface-name","lagint12").count().next(), "rctP1 has only 1 lag-interface with name lagint12");
     	
     }
